--- a/index.html
+++ b/index.html
@@ -1,19 +1,101 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>M3U8 Stream Card List</title>
   <link href="https://vjs.zencdn.net/7.18.1/video-js.css" rel="stylesheet">
   <script src="https://vjs.zencdn.net/7.18.1/video.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-hls@5.15.0/dist/videojs-contrib-hls.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f5f5f5;
+    }
+    .card-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+    .card {
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      width: calc(33.333% - 20px);
+      min-width: 300px;
+      display: flex;
+      flex-direction: column;
+    }
+    .card-title {
+      font-size: 1.2em;
+      font-weight: bold;
+      padding: 16px;
+      margin: 0;
+      border-bottom: 1px solid #ddd;
+      background-color: #f7f7f7;
+    }
+    .video-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    }
+    .video-js {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
 
-  <video id="my_video" class="video-js vjs-default-skin" controls width="640" height="264">
-    <source src="https://op-group1-swiftservehd-1.dens.tv/h/h207/index.m3u8" type="application/x-mpegURL">
-  </video>
+<div class="card-list" id="card-list"></div>
 
-  <script>
-    var player = videojs('my_video');
-  </script>
+<script>
+  const streams = [
+    { title: 'Stream 1', url: 'https://video.detik.com/trans7/smil:trans7.smil/index.m3u8' },
+    { title: 'Stream 2', url: 'https://live.cnbcindonesia.com/livecnbc/smil:cnbctv.smil/master.m3u8' },
+    { title: 'Stream 2', url: 'https://video.detik.com/transtv/smil:transtv.smil/chunklist.m3u8' },
+    { title: 'Stream 2', url: 'https://video.detik.com/trans7/smil:trans7.smil/chunklist.m3u8' },
+    // Add more streams as needed
+  ];
+
+  const cardList = document.getElementById('card-list');
+
+  streams.forEach((stream, index) => {
+    const card = document.createElement('div');
+    card.className = 'card';
+
+    const cardTitle = document.createElement('div');
+    cardTitle.className = 'card-title';
+    cardTitle.textContent = stream.title;
+
+    const videoContainer = document.createElement('div');
+    videoContainer.className = 'video-container';
+
+    const video = document.createElement('video');
+    video.id = 'video' + (index + 1);
+    video.className = 'video-js vjs-default-skin';
+    video.controls = true;
+
+    const source = document.createElement('source');
+    source.src = stream.url;
+    source.type = 'application/x-mpegURL';
+
+    video.appendChild(source);
+    videoContainer.appendChild(video);
+    card.appendChild(cardTitle);
+    card.appendChild(videoContainer);
+    cardList.appendChild(card);
+
+    videojs(video.id); // Initialize the video.js player
+  });
+</script>
 
 </body>
 </html>
